Update 'g28nm47lh-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-9bf2b45cbc.yjai.p3.openshiftapps.com/rhtap/rhtap-qe:1428ab28a8578b5c6ac57889fa6090321a7f2caf@sha256:92c6c4337cfcf59523eb7236cd23e1b4d5dd7df52b47a7cc147f12f0d260a4fe

--- a/components/g28nm47lh-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/g28nm47lh-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: g28nm47lh-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-9bf2b45cbc.yjai.p3.openshiftapps.com/rhtap/rhtap-qe:1428ab28a8578b5c6ac57889fa6090321a7f2caf@sha256:92c6c4337cfcf59523eb7236cd23e1b4d5dd7df52b47a7cc147f12f0d260a4fe
+          name: container-image
